# vemprofut

./: CMakeLists.txt  CMakePresets.json  README.md  futebol.c  futebol.h
include/: ball.h  box.h  circle.h  color.h  field.h  futebol.h  opengl.h  player.h  players_sprites.h  soundboard.h  team.h  vector.h
src/: ball.c  box.c  circle.c  field.c  futebol.c  player.c  soundboard.c  team.c
